tests/ui/coercion/coercion-slice.rs
// Tests that we forbid coercion from `[T; n]` to `&[T]`

fn main() {
    let _: &[i32] = [0];
    //~^ ERROR mismatched types
    //~| expected `&[i32]`, found array `[{integer}; 1]`
}

// ferrocene-annotations: fls_uj0kpjwyld60
// Array Types
//
// ferrocene-annotations: fls_vpbikb73dw4k
// Slice Types
